<resources>
    <string name="app_name">菜鸟</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="tab_menu_home">首页</string>
    <string name="tab_menu_hot">好友</string>
    <string name="tab_menu_buy">购物车</string>
    <string name="tab_menu_mine">我的</string>

    <string name="nametitle">请输入文件名</string>
    <string name="detailtitle">请输入文件内容</string>
    <string name="btnwrite">写入</string>
    <string name="btnclean">清空</string>
    <string name="btnread">读取文件内容</string>

    <string name="long_press_title">长按我，加载菜单</string>

    <string name="load_image">加载图片</string>
    <string name="load_html">加载html代码</string>
    <string name="load_webview">加载网页</string>

    <string name="download_title">下载</string>
    <string name="stop_title">停止</string>
    <string name="download_page_title">请输入要下载的文件地址</string>
    <string name="download_progress_rate">显示实时下载的百分比</string>

    <string name="download_file">文件下载</string>
    <string name="view_webview">网页加载</string>
    <string name="view_image">浏览图片</string>
    <string name="draw_board">我的画板</string>
    <string name="matrix_color">图片滤镜</string>
    <string name="login">登录</string>
    <string name="preforence">数据保存</string>
    <string name="view_larger_image">查看大图</string>
    <string name="webview_clean">清除缓存</string>
    <string name="webview_refresh">刷新网页</string>
    <string name="clean_board">清除画板</string>
    <string name="change_volume">调节音量</string>
    <string name="qrcode">生成二维码</string>
    <string name="location">地图定位</string>
    <string name="wallpapper">切换壁纸</string>
    <string name="show_dialog">弹出框</string>
    <string name="fast_appoint">立即预约</string>
    <string name="show_normal_dialog">Dialog</string>
    <string name="show_fragment_dialog">FragmentDialog</string>
    <string name="title_activity_base">BaseActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
