<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.PreforenceActivity">

    <com.erik.android.androidlean.view.NavigationBar
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/editname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nametitle"
            android:textSize="@dimen/font_size" />

        <EditText
            android:id="@+id/editdetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:hint="@string/detailtitle"
            android:textSize="@dimen/font_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:padding="10dp" >

        <Button
            android:id="@+id/btnsave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnwrite"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnclean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnclean"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnread"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>